# python-starter

./: README.md  pyproject.toml  setup.cfg
python_starter/: __main__.py
src/my_package/: __init__.py
