[metadata]
# TODO change all the project metadata to your actual stuff
name = python_starter
version = attr:python_starter.__VERSION__
description = A python starter project to copy and use for future projects.
long_description = file: README.md
keywords = starter, template, python
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
entry_points = python_starter
packages = python_starter